# eft-item-helper-v2

./: docker-compose.yaml  pyproject.toml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/authentication/: serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/item_counter/: admin.py  apps.py  dataclasses.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/item_counter/item_parser/: common.py  config.py  dataclasses.py  parsers.py
backend/item_counter/migrations/: 0001_initial.py  0002_alter_useritem_options.py  0003_useritem_unique_user_item.py  0004_item_item_counte_name_c4cb5d_idx_and_more.py
backend/query_params/: mixins.py  types.py  validators.py
backend/users/: urls.py  views.py
core/: settings.py  urls.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html  items.json
frontend/src/: App.css  App.js  App.jsx  index.css  index.js
frontend/src/api/: client.js  quests.js
frontend/src/components/: AuthModal.css  AuthModal.js  Header.css  Header.js  ItemCard.css  ItemCard.js  ItemList.css  ItemList.js  ItemStats.css  ItemStats.js  QuestFilter.css  QuestFilter.js  SearchBar.css  SearchBar.js
frontend/src/context/: AuthContext.js  AuthContext.jsx
frontend/src/hooks/: useProgress.js  useQuests.js
frontend/src/services/: api.js
nginx/: Dockerfile  nginx.conf
templates/: base.html
users/: forms.py
users/templates/users/: login.html
(+14 files in other folders)
